--- a/app/views/director_templates/index.html.erb
+++ b/app/views/director_templates/index.html.erb
@@ -4,6 +4,32 @@
 
 <hr>
 
+<form action="/create_director" method= "post">
+<div>
+<label for="name_field">Name</label>
+<input type="text" id="name_field" name="director_name">
+</div>
+<div>
+<label for="dob_field">Dob</label>
+<input type="date" id="dob_field" name="director_dob">
+</div>
+<div>
+<label for="bio_field">Bio</label>
+<input type="text" id="bio_field" name="director_bio">
+</div>
+<div>
+<label for="image_field">Image</label>
+<input type="text" id="image_field" name="director_image">
+</div>
+
+<button>
+  Create director
+</button>
+
+</form>
+
+<hr>
+
 <table border="1">
   <tr>
     <th>
