--- a/app/views/director_templates/show.html.erb
+++ b/app/views/director_templates/show.html.erb
@@ -6,6 +6,32 @@
   Go back
 </a>
 
+<div>
+<a href= "/delete_director/<%= @the_director.id %>">Delete director </a>
+</div>
+
+<hr>
+  <form action="/edit_director/<%= @the_director.id %>" method= "post">
+<div>
+<label for="name_field">Name</label>
+<input type="text" id="name_field" name="director_name" value= "<%= @the_director.name %>">
+</div>
+<div>
+<label for="dob_field">Dob</label>
+<input type="date" id="dob_field" name="director_dob" value="<%= @the_director.dob %>">
+</div>
+<div>
+<label for="bio_field">Bio</label>
+<input type="text" id="bio_field" name="director_bio" value="<%= @the_director.bio %>">
+</div>
+<div>
+<label for="image_field">Image</label>
+<input type="text" id="image_field" name="director_image" value="<%= @the_director.image %>">
+</div>
+
+<button>
+  Update director
+</button>
 <hr>
 
 <dl>
